# Ascii-Video-Player-CPP

./: .gitignore  CMakeLists.txt  Makefile  README.md
.cache/clangd/index/: main.cpp.31FFCCCB7DB43EC9.idx
include/: flags.hpp
include/flagmod/: errors.hpp  flags.hpp  help.hpp  lexical_conversion.hpp  str_parse.hpp
src/: main.cpp
